[TASK-1]: added buttin to header block

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="../src/styles/css/main.min.css">
 </head>
 <body>
- 
+  <header class="header">
+    <a href="#" class="btn btn__add">Add to basket</a>
+  </header>
 </body>
 </html>
