--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 <body>
   <header class="header">
     <a href="#" class="btn btn__add">Add to basket</a>
+    <button class="btn btn__reset">Reset</button>
   </header>
 </body>
 </html>
